--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -118,6 +118,11 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground font-sans;
   }
+}
+
+.button-variant:hover{
+  background-color: rgba(255, 60, 60, 0.2);
+  color: var(--color-destructive);
 }
